crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ001_DTZ001.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- kind:
    name: CallDatetimeWithoutTzinfo
    body: "The use of `datetime.datetime()` without `tzinfo` argument is not allowed"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 38
  fix: ~
  parent: ~
- kind:
    name: CallDatetimeWithoutTzinfo
    body: "The use of `datetime.datetime()` without `tzinfo` argument is not allowed"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 47
  fix: ~
  parent: ~
- kind:
    name: CallDatetimeWithoutTzinfo
    body: "The use of `datetime.datetime()` without `tzinfo` argument is not allowed"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 37
  fix: ~
  parent: ~
- kind:
    name: CallDatetimeWithoutTzinfo
    body: "The use of `datetime.datetime()` without `tzinfo` argument is not allowed"
    commit: ~
    fixable: false
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 42
  fix: ~
  parent: ~
- kind:
    name: CallDatetimeWithoutTzinfo
    body: "The use of `datetime.datetime()` without `tzinfo` argument is not allowed"
    commit: ~
    fixable: false
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 29
  fix: ~
  parent: ~

