crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ003_DTZ003.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
---
./resources/test/fixtures/flake8_datetimez/DTZ003.py:4:1: DTZ003 The use of `datetime.datetime.utcnow()` is not allowed, use `datetime.datetime.now(tz=)` instead
  |
4 | # qualified
5 | datetime.datetime.utcnow()
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ DTZ003
6 | 
7 | from datetime import datetime
  |

./resources/test/fixtures/flake8_datetimez/DTZ003.py:9:1: DTZ003 The use of `datetime.datetime.utcnow()` is not allowed, use `datetime.datetime.now(tz=)` instead
   |
 9 | # unqualified
10 | datetime.utcnow()
   | ^^^^^^^^^^^^^^^^^ DTZ003
   |


