crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ004_DTZ004.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- - kind:
      name: CallDatetimeUtcfromtimestamp
      body: "The use of `datetime.datetime.utcfromtimestamp()` is not allowed, use `datetime.datetime.fromtimestamp(ts, tz=)` instead"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 40
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeUtcfromtimestamp
      body: "The use of `datetime.datetime.utcfromtimestamp()` is not allowed, use `datetime.datetime.fromtimestamp(ts, tz=)` instead"
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 0
    end_location:
      row: 9
      column: 31
    fix: ~
    parent: ~

