crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ005_DTZ005.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- - kind:
      name: CallDatetimeNowWithoutTzinfo
      body: "The use of `datetime.datetime.now()` without `tz` argument is not allowed"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 23
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeNowWithoutTzinfo
      body: "The use of `datetime.datetime.now()` without `tz` argument is not allowed"
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 48
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeNowWithoutTzinfo
      body: "The use of `datetime.datetime.now()` without `tz` argument is not allowed"
      suggestion: ~
      fixable: false
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 27
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeNowWithoutTzinfo
      body: "The use of `datetime.datetime.now()` without `tz` argument is not allowed"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 0
    end_location:
      row: 13
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeNowWithoutTzinfo
      body: "The use of `datetime.datetime.now()` without `tz` argument is not allowed"
      suggestion: ~
      fixable: false
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 14
    fix: ~
    parent: ~

