crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ007_DTZ007.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- - kind:
      name: CallDatetimeStrptimeWithoutZone
      body: "The use of `datetime.datetime.strptime()` without %z must be followed by `.replace(tzinfo=)` or `.astimezone()`"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 53
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeStrptimeWithoutZone
      body: "The use of `datetime.datetime.strptime()` without %z must be followed by `.replace(tzinfo=)` or `.astimezone()`"
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 52
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeStrptimeWithoutZone
      body: "The use of `datetime.datetime.strptime()` without %z must be followed by `.replace(tzinfo=)` or `.astimezone()`"
      suggestion: ~
      fixable: false
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 52
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeStrptimeWithoutZone
      body: "The use of `datetime.datetime.strptime()` without %z must be followed by `.replace(tzinfo=)` or `.astimezone()`"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 0
    end_location:
      row: 13
      column: 52
    fix: ~
    parent: ~
  - kind:
      name: CallDatetimeStrptimeWithoutZone
      body: "The use of `datetime.datetime.strptime()` without %z must be followed by `.replace(tzinfo=)` or `.astimezone()`"
      suggestion: ~
      fixable: false
    location:
      row: 35
      column: 0
    end_location:
      row: 35
      column: 43
    fix: ~
    parent: ~

