crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ011_DTZ011.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
---
./resources/test/fixtures/flake8_datetimez/DTZ011.py:4:1: DTZ011 The use of `datetime.date.today()` is not allowed, use `datetime.datetime.now(tz=).date()` instead
  |
4 | # qualified
5 | datetime.date.today()
  | ^^^^^^^^^^^^^^^^^^^^^ DTZ011
6 | 
7 | from datetime import date
  |

./resources/test/fixtures/flake8_datetimez/DTZ011.py:9:1: DTZ011 The use of `datetime.date.today()` is not allowed, use `datetime.datetime.now(tz=).date()` instead
   |
 9 | # unqualified
10 | date.today()
   | ^^^^^^^^^^^^ DTZ011
   |


