crates/ruff/src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ012_DTZ012.py.snap
---
source: crates/ruff/src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- kind:
    name: CallDateFromtimestamp
    body: "The use of `datetime.date.fromtimestamp()` is not allowed, use `datetime.datetime.fromtimestamp(ts, tz=).date()` instead"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 33
  fix: ~
  parent: ~
- kind:
    name: CallDateFromtimestamp
    body: "The use of `datetime.date.fromtimestamp()` is not allowed, use `datetime.datetime.fromtimestamp(ts, tz=).date()` instead"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 24
  fix: ~
  parent: ~

